--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -7,6 +7,7 @@ redirect_from:
   - /wordpress/blog-posts/
 ---
 
+<!--
 {% include base_path %}
 {% capture written_year %}'None'{% endcapture %}
 {% for post in site.posts %}
@@ -16,7 +17,7 @@ redirect_from:
     {% capture written_year %}{{ year }}{% endcapture %}
   {% endif %}
   {% include archive-single.html %}
-{% endfor %}
+{% endfor %} -->
 
 ## Coming soon
 
